# fire_map

./: .gitignore  Jenkinsfile  Jenkinsfile copy  README.md  docker-compose.yaml
backend/: .env.dist  Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml  report.html
backend/alembic/: env.py
backend/alembic/versions/: 265abe174d72_create_user_and_exercises.py  3d51fa19e553_add_role_and_user_role_relationship.py  45cab0cd3ab2_create_event_vehicles_association_table.py  4cbd895e1134_create_event_tags_table.py  644a059d596e_add_deactivated_field_to_user.py  679ce7cad963_add_location_and_tags_to_issues.py  7323e32d444a_init_schema.py  7951263ed4ac_init_schema.py  a91f9c0d6424_create_invite_table.py  b3f1951afce0_add_password_reset_table.py  ca1848da518d_add_user_email_first_last_name.py  cf1bc9f4ba0d_create_role_event_tag_vehicletype_models.py  dea2f88f0426_add_security_settings_for_2fa.py
backend/app/: init_data.py  main.py
backend/app/config/: config_provider.py
backend/app/dependencies/: repository_dependencies.py
backend/app/domain/auth/: routes.py
backend/app/domain/event/: dto.py  repository.py  routes.py
backend/app/domain/invite/: __init__.py  model.py  repository.py  routes.py
backend/app/domain/issue/: dto.py  repository.py  routes.py
backend/app/domain/role/: dto.py  routes.py
backend/app/domain/tag/: dto.py  routes.py
backend/app/domain/user/: dependency.py  dto.py  model.py  otp_repo.py  repository.py  routes.py
backend/app/domain/vehicletype/: dto.py
backend/app/infrastructure/geocoding/: __init__.py  nominatim.py
backend/app/infrastructure/mail/: client.py
backend/app/infrastructure/postgresql/: db.py
backend/app/infrastructure/redis/: redis_client.py
backend/app/middleware/: dependencies.py  session_middleware.py
backend/app/misc/: sign.py
backend/mail_templates/: forgot_password.html.jinja  invite.html  invite.html.jinja  reset_pw.html.jinja
backend/src/: server.py
backend/src/conf/: __init__.py  model.py
backend/src/config/: config_provider.py
backend/src/dependencies/: repository_dependencies.py
backend/src/domain/auth/: routes.py  service.py
backend/src/domain/event/: dto.py  model.py  repository.py  routes.py
backend/src/domain/exercises/: dto.py  model.py  repository.py  routes.py
backend/src/domain/invite/: dto.py  model.py  repository.py  routes.py
backend/src/domain/issue/: dto.py  model.py  repository.py  routes.py
backend/src/misc/: sign.py
backend/tests/: conftest.py  init-test-db.sql
backend/tests/domain/: test_event_routes.py  test_invite_routes.py  test_issue_routes.py  test_role_routes.py  test_tag_routes.py  test_vehicle_routes.py
backend/tests/end-to-end/: __init__.py  conftest.py  test_event.py  test_issues.py  test_tag.py  test_user.py  test_vehicle_type.py
backend/tests/unit/: hmac.py
(+190 files in other folders)
